<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/history_btn"
        android:layout_width="141dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="144dp"
        android:layout_marginTop="197dp"
        android:layout_marginEnd="126dp"
        android:text="@string/history_text"
        android:textSize="15dp" />

    <Button
        android:id="@+id/Restock_btn"
        android:layout_width="153dp"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="308dp"
        android:layout_marginEnd="119dp"
        android:text="@string/Restock_text"
        android:textSize="15dp" />

    <Button
        android:id="@+id/back_btn"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="148dp"
        android:layout_marginTop="594dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="89dp"
        android:text="@string/back_text"
        android:textSize="18dp" />

</RelativeLayout>